--- a/style.css
+++ b/style.css
@@ -175,7 +175,7 @@ footer {
 }
 
 
-@media screen and (min-width: 320px) {
+@media screen and (max-width: 768px) {
     body {
         z-index: 341244;
         background-color: white;
