--- a/style.css
+++ b/style.css
@@ -178,6 +178,6 @@ footer {
 @media screen and (max-width: 768px) {
     body {
         z-index: 341244;
-        background-color: white;
+        background-image: none;
     }
 }
