--- a/Gallery.css
+++ b/Gallery.css
@@ -7,7 +7,7 @@
 
 body {
     font-family: Georgia, 'Times New Roman', Times, serif;
-    background-image: url(/images/heart-5913128_640.webp);
+    background-image: url(./images/heart-5913128_640.webp);
 }
 
 h1,
