--- a/happy moments.css
+++ b/happy moments.css
@@ -7,7 +7,7 @@
 
 body {
     font-family: Georgia, 'Times New Roman', Times, serif;
-    background-image: url(/images/not\ common\ hearts.jpg);
+    background-image: url(./images/not\ common\ hearts.jpg);
 }
 
 h1,
