--- a/happy moments.css
+++ b/happy moments.css
@@ -147,6 +147,7 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 0px 5px 0px 5px;
 }
 
 .fa-instagram {
