--- a/Gallery.css
+++ b/Gallery.css
@@ -220,7 +220,7 @@ footer {
 }
 
 .fa-instagram {
-    margin: 0px 5px;
+    margin: 0px 2px;
     color: var(--icons-color);
     font-size: 20px;
 }
@@ -257,12 +257,16 @@ footer {
         border: 2px var(--border-color) solid;
     }
 
-    .container .row{
+    .container .content-row{
         display: flex;
         flex-direction: row;
         margin-bottom: 10px;
     }
     
+    .content-row .col-12{
+        margin-bottom: 10px;
+    }
+
     footer {
         border: 2px var(--border-color) solid;
         width: 90%;
@@ -273,11 +277,8 @@ footer {
         font-size: 0.8em;
     }
 
-    .row .order-md-1{
-        order: 1;
-    }
-
-    .row .order-md-2{
-        order: 2;
+    
+    .fa-instagram {
+        margin: 0px 5px;
     }
 }
