--- a/style.css
+++ b/style.css
@@ -168,7 +168,7 @@ footer {
 }
 
 .fa-instagram {
-    margin: 0px 5px;
+    margin: 0px 2px;
     color: var(--icons-color);
     font-size: 20px;
 }
@@ -229,4 +229,7 @@ footer {
         order: 2;
     }
 
+    .fa-instagram {
+        margin: 0px 5px;
+    }
 }
