--- a/style.css
+++ b/style.css
@@ -109,6 +109,13 @@ nav a:hover {
     background-color: pink;
 }
 
+.image-container {
+    height: 100%;
+    background-image: url(./images/no-back.png);
+    background-size: cover; 
+    background-position: center;
+}
+
 .container .row {
     margin: 10px 0px;
     display: flex;
