--- a/Gallery.css
+++ b/Gallery.css
@@ -101,6 +101,13 @@ nav a:hover {
     background-color: pink;
 }
 
+.image-container {
+    height: 100%;
+    background-image: url(./images/no-back.png);
+    background-size: cover; 
+    background-position: center;
+}
+
 .row {
     margin: 10px 0px;
 }
