--- a/Gallery.css
+++ b/Gallery.css
@@ -103,7 +103,7 @@ nav a:hover {
 
 .image-container {
     height: 100%;
-    background-image: url(./images/no-back.png);
+    background-image: url(./images/pngfind.com-hearts-background-png-6357678.png);
     background-size: cover; 
     background-position: center;
 }
