--- a/style.css
+++ b/style.css
@@ -1,242 +1,1 @@
-:root {
-    --primary-color: #c22e41;
-    --border-color: #781823;
-    --background-color: #f6a2a2;
-    --icons-color: #d42f29;
-}
-
-body {
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    background-image: url(./images/top-view-paper-hearts-world-heart-day.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-}
-
-.adaptive {
-    position: absolute;
-    top: -10000px;
-}
-
-h1,
-h2 {
-    margin: 0;
-}
-
-header h1 {
-    font-size: 50px;
-    padding-top: 15px;
-}
-
-header h1,
-header h2 {
-    font-family: "Tangerine", cursive;
-    color: var(--primary-color);
-}
-
-header h2 {
-    font-size: 30px;
-    padding-bottom: 15px;
-}
-
-header {
-    text-align: center;
-}
-
-.header-starter {
-    margin: 0px 0px 25px 0px;
-    background-image: url(https://cdn1.vectorstock.com/i/1000x1000/86/00/heart-texture-on-white-background-hand-drawn-vector-29058600.jpg);
-}
-
-header nav {
-    background-color: pink;
-    padding: 20px 0px 20px 0px;
-    border-top: 2px var(--border-color) solid;
-    border-bottom: 2px var(--border-color) solid;
-    width: 100%;
-    margin: auto;
-    margin-bottom: 25px;
-}
-
-nav select {
-    padding: 10px 20px;
-    width: 70%;
-    border-radius: 5px;
-}
-
-nav a {
-    text-decoration: none;
-    font-family: "Jost", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 600;
-    font-style: normal;
-    color: var(--primary-color);
-    display: inline-block;
-    padding: 5px 40px;
-    font-weight: bold;
-}
-
-nav .current {
-    color: rgb(255, 36, 36);
-    font-weight: 900;
-    text-transform: uppercase;
-}
-
-nav a:hover {
-    background-color: #f4f4f4;
-    color: red;
-    border-radius: 30px;
-    box-shadow: 0 0 0 1px red;
-    transition: all 0.4s;
-}
-
-.fa-heart {
-    color: var(--icons-color);
-}
-
-.left {
-    padding: 0px 40px 0px 5px;
-}
-
-.right {
-    padding: 0px 5px 0px 40px;
-}
-
-.container {
-    border-top: 2px var(--border-color) solid;
-    border-bottom: 2px var(--border-color) solid;
-    padding: 15px;
-    background-color: pink;
-}
-
-.image-container {
-    height: 100%;
-    background-image: url(./images/pngfind.com-hearts-background-png-6357678.png);
-    background-size: cover; 
-    background-position: center;
-}
-
-.container .row {
-    margin: 10px 0px;
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 18px;
-}
-
-.row .order-1{
-    order: 1;
-}
-
-.row .order-2{
-    order: 2;
-}
-
-.col-4 {
-    object-fit: cover;
-    object-position: center
-}
-
-img {
-    width: 100%;
-    height: 100%;
-    border-radius: 30px;
-    border: 2px var(--border-color) solid;
-}
-
-footer {
-    text-align: center;
-    background-color: pink;
-    border-top: 2px var(--border-color) solid;
-    margin: auto;
-    margin-top: 25px;
-    padding: 20px 0px 20px 0px;
-    width: 100%;
-}
-
-.info-footer,
-.text {
-    font-family: "Roboto Condensed", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 700;
-    font-style: normal;
-    font-size: 18px;
-    color: #781823;
-}
-
-.info-footer .row {
-    margin: 0;
-}
-
-.info-footer .row .col-4 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 0px 5px 0px 5px;
-}
-
-.fa-instagram {
-    margin: 0px 2px;
-    color: var(--icons-color);
-    font-size: 20px;
-}
-
-.info-footer .row .col-4 a {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-decoration: none;
-}
-
-.info-footer .row .col-4 p {
-    margin: 0;
-}
-
-.text-footer {
-    font-size: 0.5em;
-    margin: 0;
-}
-
-@media screen and (min-width: 768px) {
-    .header-starter{
-        margin: 25px 0px 25px 0px;
-    }
-
-    header nav {
-        border: 2px var(--border-color) solid;
-        border-radius: 30px;
-        width: 90%;
-    }
-
-    .container{
-        border-radius: 30px;
-        border: 2px var(--border-color) solid;
-    }
-
-    .container .row{
-        display: flex;
-        flex-direction: row;
-        margin-bottom: 10px;
-    }
-    
-    footer {
-        border: 2px var(--border-color) solid;
-        width: 90%;
-        border-radius: 30px 30px 0px 0px;
-    }
-
-    .text-footer{
-        font-size: 0.8em;
-    }
-
-    .row .order-md-1{
-        order: 1;
-    }
-
-    .row .order-md-2{
-        order: 2;
-    }
-
-    .fa-instagram {
-        margin: 0px 5px;
-    }
-}
+:root{--primary-color:#c22e41;--border-color:#781823;--background-color:#f6a2a2;--icons-color:#d42f29}body{font-family:Georgia,"Times New Roman",Times,serif;background-image:url(./images/top-view-paper-hearts-world-heart-day.jpg);background-repeat:no-repeat;background-size:cover;background-position:center}.adaptive{position:absolute;top:-10000px}h1,h2{margin:0}header h1{font-size:50px;padding-top:15px}header h1,header h2,nav a{color:var(--primary-color)}header h1,header h2{font-family:"Tangerine",cursive}header h2{font-size:30px;padding-bottom:15px}header{text-align:center}.header-starter{margin:0 0 25px;background-image:url(https://cdn1.vectorstock.com/i/1000x1000/86/00/heart-texture-on-white-background-hand-drawn-vector-29058600.jpg)}header nav{background-color:pink;padding:20px 0;border-top:2px var(--border-color) solid;border-bottom:2px var(--border-color) solid;width:100%;margin:auto auto 25px}nav select{padding:10px 20px;width:70%;border-radius:5px}nav a{text-decoration:none;font-family:"Jost",sans-serif;font-optical-sizing:auto;font-style:normal;display:inline-block;padding:5px 40px;font-weight:700}nav .current{color:#ff2424;font-weight:900;text-transform:uppercase}img,nav a:hover{border-radius:30px}nav a:hover{background-color:#f4f4f4;color:red;box-shadow:0 0 0 1px red;transition:all .4s}.fa-heart{color:var(--icons-color)}.left{padding:0 40px 0 5px}.right{padding:0 5px 0 40px}.container,footer{background-color:pink;border-top:2px var(--border-color) solid}.container{border-bottom:2px var(--border-color) solid;padding:15px}.image-container{height:100%;background-image:url(./images/no-back.png);background-size:cover;background-position:center}.container .row{display:flex;flex-direction:column;margin:10px 0 18px}.row .order-1{order:1}.row .order-2{order:2}.col-4{object-fit:cover;object-position:center}img{width:100%;height:100%;border:2px var(--border-color) solid}footer{text-align:center;margin:25px auto auto;padding:20px 0;width:100%}.info-footer,.text{font-family:"Roboto Condensed",sans-serif;font-optical-sizing:auto;font-weight:700;font-style:normal;font-size:18px;color:#781823}.info-footer .row,.info-footer .row .col-4 p{margin:0}.info-footer .row .col-4,.info-footer .row .col-4 a{display:flex;justify-content:center;align-items:center}.info-footer .row .col-4{padding:0 5px}.fa-instagram{margin:0 2px;color:var(--icons-color);font-size:20px}.info-footer .row .col-4 a{text-decoration:none}.text-footer{font-size:.5em;margin:0}@media screen and (min-width:768px){.header-starter{margin:25px 0}header nav{width:90%}.container,footer,header nav{border-radius:30px;border:2px var(--border-color) solid}.container .row{display:flex;flex-direction:row;margin-bottom:10px}footer{width:90%;border-radius:30px 30px 0 0}.text-footer{font-size:.8em}.row .order-md-1{order:1}.row .order-md-2{order:2}.fa-instagram{margin:0 5px}}
